--- a/manifest.json
+++ b/manifest.json
@@ -23,8 +23,8 @@
 
   "content_scripts": [
     {
-      "matches": ["*://www.youtube.com/*"],
-      "js": ["scripts/main.js"]
+      "matches": ["*://www.youtube.com/watch?*"],
+      "js": ["scripts/adSkipper.js"]
     }
   ]
 }
