--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,25 @@
 {
   "manifest_version": 3,
   "name": "YouSkip",
-  "version": "1.0.3",
-
+  "version": "0.1.3",
+  "author": "Mr-Fougere",
   "description": "Skip Ads automatically",
   "permissions": ["storage"],
   "background": {
-    "scripts": ["scripts/backgroundLite.js","scripts/backgroundAdvanced.js"]
+    "scripts": ["scripts/backgroundLite.js", "scripts/backgroundAdvanced.js"]
   },
   "icons": {
-    "64": "icons/logo64.png",
-    "48": "icons/logo48.png"
+    "48": "assets/icons/logo48.png",
+    "64": "assets/icons/logo64.png",
+    "96": "assets/icons/logo96.png",
+    "192": "assets/icons/logo192.png"
   },
   "action": {
     "default_icon": {
-      "48": "icons/logo48.png",
-      "64": "icons/logo64.png"
+      "48": "assets/icons/logo48.png",
+      "64": "assets/icons/logo64.png",
+      "96": "assets/icons/logo96.png",
+      "192": "assets/icons/logo192.png"
     },
     "default_title": "YouSkip",
     "default_popup": "popup/popup.html"
