--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
   "content_scripts": [
     {
       "matches": ["*://www.youtube.com/watch?*"],
-      "js": ["scripts/adSkipper.js"]
+      "js": ["scripts/adSkipper.js","scripts/resolutionBlur.js"]
     }
   ],
   "browser_specific_settings": {
